# midi-to-fnf

./: .gitignore  Cargo.toml  README.md
src/: chart.rs  data.rs  main.rs  util.rs
