[package]
name = "midi-to-fnf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = { version = "*", features = ["strict"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rfd = "*"
